err/dquery.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DQuery-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/cli'...
Listing './lib/python3.5/site-packages/cli/_ext'...
Listing './lib/python3.5/site-packages/cli/tests'...
Listing './lib/python3.5/site-packages/cli/tests/functional'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/dquery'...
Compiling './lib/python3.5/site-packages/dquery/application.py'...
***   File "./lib/python3.5/site-packages/dquery/application.py", line 86
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dquery/commands'...
Compiling './lib/python3.5/site-packages/dquery/commands/module_info_dquery_command.py'...
***   File "./lib/python3.5/site-packages/dquery/commands/module_info_dquery_command.py", line 13
    print yaml.dump(info, default_flow_style=False)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dquery/commands/modules_dquery_command.py'...
***   File "./lib/python3.5/site-packages/dquery/commands/modules_dquery_command.py", line 15
    print ', '.join(['module:' + module_namespace, 'version:' + version, 'filename:' + module_info['filename']])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dquery/commands/projects_dquery_command.py'...
***   File "./lib/python3.5/site-packages/dquery/commands/projects_dquery_command.py", line 27
    print ', '.join(['project:' + project, 'version:' + version, 'directory:' + project_dir, 'status: latest version is ' + update_info['version']])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dquery/commands/usage_dquery_command.py'...
***   File "./lib/python3.5/site-packages/dquery/commands/usage_dquery_command.py", line 21
    print project
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dquery/formatters'...
Compiling './lib/python3.5/site-packages/dquery/formatters/json_dquery_formatter.py'...
***   File "./lib/python3.5/site-packages/dquery/formatters/json_dquery_formatter.py", line 5
    print json.dumps(output, indent=2)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dquery/formatters/pipe_dquery_formatter.py'...
***   File "./lib/python3.5/site-packages/dquery/formatters/pipe_dquery_formatter.py", line 8
    print ' '.join(line)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dquery/formatters/yaml_dquery_formatter.py'...
***   File "./lib/python3.5/site-packages/dquery/formatters/yaml_dquery_formatter.py", line 5
    print yaml.dump(output, default_flow_style=False)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dquery/lib.py'...
***   File "./lib/python3.5/site-packages/dquery/lib.py", line 83
    print 'Error: variable ' + variable + ' not found in ' + filename
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dquery/test'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/phpserialize-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyCLI-2.0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
